--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -1,5 +1,20 @@
 <div class="container p-4">
   <h1>Listado de usuarios</h1>
+
+  <nav class="navbar navbar-light bg-light">
+    <div class="container-fluid">
+      <form class="d-flex" [formGroup]="searchForm">
+        <input
+          class="form-control me-2"
+          type="search"
+          formControlName="search"
+          placeholder="Buscar..."
+          aria-label="Buscar..."
+        />
+      </form>
+    </div>
+  </nav>
+
   <table class="table table-dark">
     <div class="table-responsive p-4">
       <table class="table table-striped align-middle">
